[tool.poetry]
name = "book-contact-py"
version = "0.1.0"
description = "CLI app to save your contacts"
authors = ["fperez08 <francisco.pgarcia@gmail.com>"]
readme = "README.md"
packages = [{include = "book_contact_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
